[tool.poetry]
name = "sqlalchemy-columns"
version = "0.1.0"
description = ""
authors = ["leodedsec <azatabdrashitov7@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
